--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
     <div id="transactionContainer">
         <!-- Các biểu mẫu giao dịch sẽ được thêm vào đây -->
     </div>
-    <button onclick="addTransactionForm()">Thêm Giao Dịch</button>
-    <button onclick="removeTransactionForm()">Bớt Giao Dịch</button>
+    <button onclick="addTransactionForm()">Add Transactions</button>
+    <button onclick="removeTransactionForm()">Remove Transactions</button>
     <button onclick="processTransactions()">Minimize Transactions</button>
     <div id="results"></div>
-
+    <div id="resultContainer">Kết quả giao dịch:</div>
     <script src="script.js"></script>
 </body>
 </html>
